kubernetes/apps/o11y/alert-to-zeroclaw/app/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: alert-to-zeroclaw
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: alert-to-zeroclaw
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: alertmanager
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    # ZeroClaw webhook endpoint
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: zeroclaw
            app.kubernetes.io/name: zeroclaw
      toPorts:
        - ports:
            - port: "42617"
              protocol: TCP
    # DNS resolution
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
